--- a/templates/components/navbar/_navbar.html.twig
+++ b/templates/components/navbar/_navbar.html.twig
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2c3e50;">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('app_index') }}">myAgenda</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                {# {% include 'c/omponents/navbar/links/_contact.html.twig' %} #}
+            </ul>
+        </div>
         {% if app.user %}
             <a class="btn btn-primary mx-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Mon compte" href="{{ path('app_index') }}">
                 <i class="fas fa-user" aria-hidden="true"></i>
