--- a/templates/components/navbar/_navbar.html.twig
+++ b/templates/components/navbar/_navbar.html.twig
@@ -15,7 +15,7 @@
             </a>
         {% else %}
             <a class="btn btn-primary mx-1" href="{{ path('app_login') }}">Connexion <i class="fas fa-sign-in" aria-hidden="true"></i></a>
-            <a class="btn btn-info mx-1" href="{{ path('app_register') }}">S'enregistrer</a>
+            <a class="btn btn-secondary mx-1" href="{{ path('app_register') }}">S'enregistrer</a>
         {% endif %}
     </div>
 </nav>
